--- a/src/style.css
+++ b/src/style.css
@@ -1,96 +1,141 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+.container {
+  margin-left: 115px;
+  margin-right: 115px;
+}
+
+.header-wraper {
+  background: url(/pic.png);
+}
+
+.header {
+  padding-top: 40px;
+  padding-bottom: 110px;
+}
+
+.header-bg__logo {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.header-title {
+  color: #DC56C5;
+  font-family: "Montserrat", sans-serif;
+  justify-self: center;
+  font-weight: 900;
+  font-size: 50px;
+}
+
+.header-bottom {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+  column-gap: 30px;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.header-bottom-l__input {
+
+  width: 270px;
+  height: 40px;
+  border-radius: 20px;
+  border: none;
+  backdrop-filter: blur(20px);
+  background: rgba(255, 255, 255, 0.2);
+  padding-left: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
 }
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+
+.header-bottom-l__svg {
+  position: absolute;
+}
+
+.header-bottom-r__input {
+
+  width: 270px;
+  height: 40px;
+  border-radius: 20px;
+  border: none;
+  backdrop-filter: blur(20px);
+  background: rgba(255, 255, 255, 0.2);
+  padding-left: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+input::placeholder {
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  color: #939393;
+}
+
+input:focus-visible {
+  outline: none;
+  color: white;
+}
+
+.main-wraper{
+   background: url(/bg\ body.png) no-repeat center/cover;
+}
+
+.main {
+ 
+  display: flex;
+}
+
+.main-block__img {
+  width: 180px;
+  height: 227px;
+}
+
+.main-block__title {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
   text-align: center;
+  color: #dc56c5;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #f7df1eaa);
+.main-block__date {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  text-align: center;
+  color: #fff;
 }
 
-.card {
-  padding: 2em;
+.main-block-bot {
+  display: flex;
 }
 
-.read-the-docs {
-  color: #888;
+.main-block-bot-geo {
+  width: 137px;
+  height: 17px;
+  color: #FFFFFF  ;
+  text-decoration: none;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.main-block{
+  position: relative;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.main-block::before{
+  content: '';
+  position: absolute;
+  border: 1px solid rgba(220, 86, 197, 0.3);
+border-radius: 50px 0;
+width: 153px;
+height: 143px;
+right: -14px;
+top: -13px;
 }
