--- a/src/style.css
+++ b/src/style.css
@@ -84,12 +84,12 @@ input:focus-visible {
   color: white;
 }
 
-.main-wraper{
-   background: url(/bg\ body.png) no-repeat center/cover;
+.main-wraper {
+  background: url(/bg\ body.png) no-repeat center/cover;
 }
 
 .main {
- 
+
   display: flex;
 }
 
@@ -121,21 +121,29 @@ input:focus-visible {
 .main-block-bot-geo {
   width: 137px;
   height: 17px;
-  color: #FFFFFF  ;
+  color: #FFFFFF;
   text-decoration: none;
 }
 
-.main-block{
+.main-block {
   position: relative;
 }
 
-.main-block::before{
+.main-block::before {
   content: '';
   position: absolute;
   border: 1px solid rgba(220, 86, 197, 0.3);
-border-radius: 50px 0;
-width: 153px;
-height: 143px;
-right: -14px;
-top: -13px;
+  border-radius: 50px 0;
+  width: 153px;
+  height: 143px;
+  right: -14px;
+  top: -13px;
+}
+
+.footer__text{
+  font-family: var(--font-family);
+font-weight: 400;
+font-size: 16px;
+text-align: center;
+color: #939393;
 }
